--- a/public/css/main.css
+++ b/public/css/main.css
@@ -512,23 +512,40 @@ body:hover .visually-hidden input {
   display: none !important; }
 
 .hero-container {
+  width: 100%; }
+
+.logo-container {
   width: 100%;
-  min-height: 20em;
-  max-height: 40em;
   background-image: url("../img/header-img.jpg");
   background-size: cover;
   background-color: rgba(180, 73, 34, 0.22);
+  min-height: 18em;
+  max-height: 40em;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between; }
+  align-items: center; }
+  @media only screen and (min-width: 25em) {
+    .logo-container {
+      min-height: 24em; } }
 
-.logo-container {
+.logo {
   max-width: 36rem;
   width: 95%;
   margin: 0 auto;
   text-align: center; }
-  .logo-container .svg-logo {
+  .logo .svg-logo {
     width: 100%; }
+
+.header-nav {
+  background-color: #181a27;
+  text-align: center;
+  text-transform: uppercase;
+  min-height: 3em;
+  display: flex;
+  flex-direction: row;
+  justify-content: center; }
+  .header-nav .nav-links {
+    padding: 1em 1em;
+    text-decoration: none; }
 
 a:hover svg path {
   fill: #181a27; }
